--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.3.3"
+  },
+  "overrides": {
+    "brace-expansion": "^2.0.2",
+    "esbuild": "^0.25.0"
+  },
+  "resolutions": {
+    "brace-expansion": "^2.0.2",
+    "esbuild": "^0.25.0"
   }
 }
